Implement MVP - Updates Logback dependency versions - Applies security recommendation related to how hidden attribute is set on Windows - Changes RSA algorithm name
Resolves #12

Signed-off-by: Esta Nagy <nagyesta@gmail.com>